--- a/webapp/index.html
+++ b/webapp/index.html
@@ -7,12 +7,14 @@
 		id="sap-ui-bootstrap"
 		src="resources/sap-ui-core.js"
 		data-sap-ui-theme="sap_horizon"
-		data-sap-ui-compat-version="edge"
+		data-sap-ui-libs="sap.m"
+		data-sap-ui-compatVersion="edge"
 		data-sap-ui-async="true"
-		data-sap-ui-on-init="module:sap/ui/core/ComponentSupport"
-		data-sap-ui-resource-roots='{
+		data-sap-ui-onInit="module:sap/ui/core/ComponentSupport"
+		data-sap-ui-resourceroots='{
 			"ui5.walkthrough": "./"
 		}'>
+
 	</script>
 </head>
 <body class="sapUiBody" id="content">
