--- a/webapp/test/integration/opaTests.qunit.html
+++ b/webapp/test/integration/opaTests.qunit.html
@@ -1,17 +1,18 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Integration tests for the UI5 Walkthrough</title>
+	<title>Integration tests for UI5 Walkthrough</title>
 	<meta charset="utf-8">
 
 	<script
 		id="sap-ui-bootstrap"
 		src="../../resources/sap-ui-core.js"
 		data-sap-ui-theme="sap_horizon"
-		data-sap-ui-resource-roots='{
+		data-sap-ui-resourceroots='{
 			"ui5.walkthrough": "../../"
 		}'
-		data-sap-ui-compat-version="edge"
+		data-sap-ui-animation="false"
+		data-sap-ui-compatVersion="edge"
 		data-sap-ui-async="true">
 	</script>
 
